# TradeSense

./: .dockerignore  .env.example  .gitignore  .htaccess  AGENTS.md  DEVELOPMENT.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  passenger_wsgi.py
backend/: requirements.txt  verify_alpaca.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  risk_presets.py
backend/app/db/: __init__.py  users_db.py
backend/app/services/: alpaca_service.py  analysis_agent.py  auth_service.py  compliance_service.py  crypto_keys.py  (+16 more)
backend/tests/: conftest.py  test_compliance_lots.py  test_earnings_service.py  test_event_calendar.py  test_notification_whatsapp.py  test_pdt_gate.py  test_swing_compliance.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx  theme.ts  vite-env.d.ts
infra/aws/: README.md  task-definition.json.example
scratch/: test_alpaca.py
tradesense-deploy/: .env.example  .htaccess  deploy.sh  passenger_wsgi.py
tradesense-deploy/backend/: requirements.txt
v2/: .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
v2/api/: index.py
v2/app/: alpaca_config.py  backtest.py  briefing.py  broker.py  config.py  data.py  decisions.py  engine.py  indicators.py  main.py  news_overlay.py  notify.py  regime.py  risk.py  state.py  strategy.py
v2/app/static/: index.html
v2/scripts/: run_backtest.py
v2/tests/: test_core.py
(+57 files in other folders)
