[project]
name = "tradesense"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.33",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10",
    "pandas>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openai>=1.40",
]

[tool.vercel]
entrypoint = "api/index.py"
